Centered Title, adjustments an menu fixed

--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -1,6 +1,6 @@
 <section id="home">
-  <div class="box-container">
-    <div class="box-content">
+  <div class="box-container title-container">
+    <div class="box-content title-content">
       <h1>
         José Manuel <br />
         Rodríguez Camacho
@@ -37,9 +37,7 @@
           <app-svg-icon [svgName]="'phone'" />
         </a>
       </div>
+      <button class="btn" (click)="downloadFile()">Descargar CV</button>
     </div>
-    <!-- <div class="arrow-container">
-      <div class="arrow-down"></div>
-    </div> -->
   </div>
 </section>
