--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="theme">
   <app-header />
-  <!-- <app-to-top-btn /> -->
+  <app-to-top-btn />
 
   <main>
     <div class="video-container">
