--- a/src/app/home/components/sections/title/title.component.scss
+++ b/src/app/home/components/sections/title/title.component.scss
@@ -5,9 +5,22 @@ section#home {
   height: 100vh;
 }
 
+.title-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .title-content {
+    text-align: center;
+  }
+}
+
 .links {
   display: flex;
+  justify-content: center;
   gap: 1rem;
+  margin-block: 2rem;
   a {
     cursor: pointer;
     display: flex;
@@ -21,18 +34,8 @@ section#home {
     border: none;
     transition: transform 0.2s ease-in-out;
     &:hover {
-      transform: scale(1.05);
+      background-color: $d-primary-color;
+      transform: scale(1.1);
     }
-  }
-}
-
-.arrow-container {
-  display: flex;
-  justify-content: center;
-  .arrow-down {
-    width: 100px;
-    height: 100px;
-    background-color: $white;
-    clip-path: polygon(50% 57%, 95% 38%, 80% 38%, 50% 50%, 20% 38%, 5% 38%);
   }
 }
