--- a/src/app/home/layout/header/header.component.scss
+++ b/src/app/home/layout/header/header.component.scss
@@ -1,7 +1,8 @@
 @import "./../../../assets/themes/themes.scss";
 
 header {
-  position: sticky;
+  position: fixed;
+  width: 100%;
   z-index: 10;
   top: 0rem;
 }
