--- a/src/app/home/layout/to-top-btn/to-top-btn.component.scss
+++ b/src/app/home/layout/to-top-btn/to-top-btn.component.scss
@@ -1,8 +1,10 @@
 @import "./../../../assets/themes/themes.scss";
 
 .to-top-btn {
-  bottom: 2rem;
-  left: 2rem;
+  position: fixed;
+  z-index: 5;
+  bottom: 3rem;
+  right: 3rem;
   height: 2rem;
   width: 2rem;
   background-color: $white;
