--- a/src/app/home/layout/to-top-btn/to-top-btn.component.html
+++ b/src/app/home/layout/to-top-btn/to-top-btn.component.html
@@ -1,1 +1,4 @@
-<button class="to-top-btn">^</button>
+<button class="to-top-btn" (click)="scrollToTop()">
+  <app-svg-icon [svgName]="'arrow-up'" [svgColor]="'black'" />
+</button>
+<a #linkToTop href="#">Link OCULTO</a>
