--- a/src/assets/styles/responsive-boxes.scss
+++ b/src/assets/styles/responsive-boxes.scss
@@ -3,6 +3,7 @@
   scroll-margin-top: 4rem;
   padding-block: 1.5rem 3rem;
   padding-inline: 5rem;
+  transition: 0.1s ease-in-out;
   .box-content {
     .box-main-content {
       padding-inline: 2rem;
