--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,14 +3,10 @@
   <app-to-top-btn />
 
   <main>
-    <div class="video-container">
-      @defer {
-      <video autoplay muted loop poster="assets/images/background-picture.png">
-        <source src="assets/video/background.mp4" type="video/mp4" />
-        Tu navegador no soporta la etiqueta de video.
-      </video>
-      }
-    </div>
+    <video muted loop poster="assets/images/background-picture.png">
+      <source src="assets/video/background.mp4" type="video/mp4" />
+      Tu navegador no soporta la etiqueta de video.
+    </video>
     <app-title />
 
     @defer {
