--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,7 +23,7 @@ main {
 video {
   position: fixed;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   object-fit: cover;
   z-index: -1;
 }
