Pequeñas correcciones accesibilidad

--- a/src/app/assets/themes/themes.scss
+++ b/src/app/assets/themes/themes.scss
@@ -1,6 +1,6 @@
 // Colores
 
-$d-primary-color: #35b895;
+$d-primary-color: #00cd96;
 $d-primary-light-color: #cfeacb;
 $d-primary-dark-color: #222e2b;
 
