--- a/src/app/home/components/sections/experience/experience.component.scss
+++ b/src/app/home/components/sections/experience/experience.component.scss
@@ -2,7 +2,7 @@
 @import "src/app/assets/themes/breakpoints.scss";
 
 section#experience {
-  background: rgba($grey-14, 0.7);
+  background: rgba($black, 0.8);
 }
 
 .description {
