--- a/src/app/home/layout/footer/lang-selector/lang-selector.component.html
+++ b/src/app/home/layout/footer/lang-selector/lang-selector.component.html
@@ -2,8 +2,8 @@
   <div class="selector-btn">{{ lang }}</div>
   <div class="selector-content">
     <div class="selector-list">
-      <a (click)="setLang('es')">Español</a>
-      <a (click)="setLang('en')">Inglés</a>
+      <a href="" (click)="setLang('es')">Español</a>
+      <a href="" (click)="setLang('en')">Inglés</a>
     </div>
   </div>
 </div>
