--- a/src/app/home/layout/to-top-btn/to-top-btn.component.scss
+++ b/src/app/home/layout/to-top-btn/to-top-btn.component.scss
@@ -10,6 +10,10 @@
   background-color: $white;
   border: none;
   border-radius: 50%;
+  transition: transform 0.2s ease-in-out;
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
 a {
