--- a/src/app/home/layout/to-top-btn/to-top-btn.component.scss
+++ b/src/app/home/layout/to-top-btn/to-top-btn.component.scss
@@ -1,4 +1,5 @@
 @import "./../../../assets/themes/themes.scss";
+@import "./../../../assets/themes/breakpoints.scss";
 
 .to-top-btn {
   position: fixed;
@@ -10,9 +11,17 @@
   background-color: $white;
   border: none;
   border-radius: 50%;
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, bottom 0.2s ease, right 0.2s ease;
   &:hover {
     transform: scale(1.1);
+  }
+  @media (max-width: $tablet-breakpoint) {
+    right: 2rem;
+    bottom: 2rem;
+  }
+  @media (max-width: $mobile-breakpoint) {
+    right: 1rem;
+    bottom: 1rem;
   }
 }
 
