Correcciones y copywritting de educacion

--- a/src/app/home/components/sections/curriculum/curriculum.component.html
+++ b/src/app/home/components/sections/curriculum/curriculum.component.html
@@ -7,6 +7,13 @@
         ¿Te interesa saber más sobre mi? Descarga mi CV y explora mis
         habilidades, proyectos y logros profesionales ¡No dudes en contactarme!
       </p>
+      <embed
+        src="assets/documents/curriculum.pdf"
+        type="application/pdf"
+        width="100%"
+        height="600px"
+      />
+
       <div class="btn-container">
         <button class="btn" (click)="downloadFile()">Descargar CV</button>
         <a
