--- a/src/app/home/components/sections/education/education.component.html
+++ b/src/app/home/components/sections/education/education.component.html
@@ -20,7 +20,7 @@
         }
       </ul>
 
-      <h4>Cursos</h4>
+      <h4>Cursos y Certificaciones</h4>
       <ul>
         @for(course of courses; track $index) {
         <li class="timeline-item">
