--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -6,7 +6,7 @@
         Rodríguez Camacho
       </h1>
       <h2>Full-Stack Web Developer</h2>
-      <p>¡Bienvenido a mi página web!</p>
+      <p>Intenta aprender algo sobre todo y todo sobre algo - Thomas Huxley</p>
       <div class="links">
         <!-- LINKEDIN -->
         <a
