--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,13 +21,12 @@ h5 {
   font-family: "PoiretOne", sans-serif;
   transition: font-size 0.2s ease-in-out;
   &::selection {
-    background: $grey-06;
+    background: $grey-08;
   }
 }
 
 /* Color y selección específicos por encabezado */
-h1,
-h5 {
+h1 {
   color: $white;
 }
 
@@ -38,6 +37,10 @@ h4 {
   &::selection {
     color: $white;
   }
+}
+
+h5 {
+  color: $grey-01;
 }
 
 /* Tamaño y márgenes específicos por encabezado */
@@ -73,10 +76,10 @@ label,
 input,
 textarea,
 span {
-  color: $white;
+  color: $grey-01;
   font-family: "Lato", sans-serif;
   &::selection {
-    background: $grey-06;
+    background: $grey-08;
   }
 }
 
@@ -84,7 +87,7 @@ button {
   color: $white;
   font-family: "PoiretOne", sans-serif;
   &::selection {
-    background: $grey-06;
+    background: $grey-08;
   }
   &:hover {
     cursor: pointer;
@@ -97,7 +100,7 @@ a {
   font-family: "PoiretOne", sans-serif;
   &::selection {
     color: $white;
-    background: $grey-06;
+    background: $grey-08;
   }
 }
 
