--- a/src/app/home/components/sections/about-me/about-me.component.scss
+++ b/src/app/home/components/sections/about-me/about-me.component.scss
@@ -10,19 +10,23 @@ section#about-me {
 
     img {
       margin-top: 1rem;
-      width: min(30rem, 100%);
-      height: auto;
+      max-width: 50%;
       border-radius: 1rem;
     }
-  }
-}
-
-@media (max-width: $laptop-breakpoint) {
-  section#about-me {
-    .about-me-container {
+    @media (max-width: $laptop-breakpoint) {
       flex-direction: column;
       img {
-        width: 100%;
+        max-width: 80%;
+      }
+    }
+    @media (max-width: $tablet-breakpoint) {
+      img {
+        max-width: 90%;
+      }
+    }
+    @media (max-width: $mobile-breakpoint) {
+      img {
+        max-width: 100%;
       }
     }
   }
