--- a/src/app/home/components/sections/curriculum/curriculum.component.scss
+++ b/src/app/home/components/sections/curriculum/curriculum.component.scss
@@ -5,9 +5,44 @@ section#curriculum {
   background: $grey-14;
 }
 
-.btn-container {
+.cv-container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  transition: all 0.2s ease-in-out;
+  img {
+    max-width: 50%;
+    border-radius: 0.25rem;
+  }
+  .download-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    p {
+      margin: 0;
+    }
+    button {
+      margin-top: 1rem;
+    }
+  }
+  @media (max-width: $laptop-breakpoint) {
+    flex-direction: column;
+    img {
+      max-width: 80%;
+    }
+  }
+  @media (max-width: $tablet-breakpoint) {
+    img {
+      max-width: 90%;
+    }
+  }
+  @media (max-width: $mobile-breakpoint) {
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
 #link {
