--- a/src/app/home/components/sections/education/education.component.scss
+++ b/src/app/home/components/sections/education/education.component.scss
@@ -2,7 +2,8 @@
 @import "src/app/assets/themes/breakpoints.scss";
 
 section#education {
-  background: $grey-14;
+  background: rgb(0 0 0 / 78%);
+  backdrop-filter: blur(1rem);
   .education-container {
     display: flex;
     flex-direction: column;
