Establecido numero de telefono en el boton de phone

--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -29,11 +29,7 @@
           <app-svg-icon [svgName]="'mail'" />
         </a>
         <!-- PHONE -->
-        <a
-          href="https://github.com/josemanuelrc"
-          target="_blank"
-          aria-label="Phone"
-        >
+        <a href="tel:+34619832538" target="_blank" aria-label="Phone">
           <app-svg-icon [svgName]="'phone'" />
         </a>
       </div>
