Añadido ScrollSpyDirective a los componentes y optimizada la navegación con enlaces dinámicos.

--- a/src/app/home/components/sections/about-me/about-me.component.html
+++ b/src/app/home/components/sections/about-me/about-me.component.html
@@ -1,4 +1,9 @@
-<section id="about-me" class="box-container">
+<section
+  id="about-me"
+  class="box-container"
+  appScrollSpy
+  [sectionId]="'about-me'"
+>
   <article class="box-content">
     <h3>Sobre Mí</h3>
     <hr />
