--- a/src/app/home/components/sections/contact/contact.component.html
+++ b/src/app/home/components/sections/contact/contact.component.html
@@ -1,4 +1,9 @@
-<section id="contact" class="box-container">
+<section
+  id="contact"
+  class="box-container"
+  appScrollSpy
+  [sectionId]="'contact'"
+>
   <article class="box-content">
     <h3>Contacto</h3>
     <hr />
