--- a/src/app/home/components/sections/curriculum/curriculum.component.html
+++ b/src/app/home/components/sections/curriculum/curriculum.component.html
@@ -1,5 +1,10 @@
 <!-- Sección del currículum -->
-<section id="curriculum" class="box-container">
+<section
+  id="curriculum"
+  class="box-container"
+  appScrollSpy
+  [sectionId]="'curriculum'"
+>
   <!-- Contenido del currículum -->
   <article class="box-content">
     <h3>Currículum Vitae</h3>
