--- a/src/app/home/components/sections/education/education.component.html
+++ b/src/app/home/components/sections/education/education.component.html
@@ -1,4 +1,9 @@
-<section id="education" class="box-container">
+<section
+  id="education"
+  class="box-container"
+  appScrollSpy
+  [sectionId]="'education'"
+>
   <article class="box-content">
     <h3>Formación</h3>
     <hr />
