--- a/src/app/home/components/sections/experience/experience.component.html
+++ b/src/app/home/components/sections/experience/experience.component.html
@@ -1,4 +1,9 @@
-<section id="experience" class="box-container">
+<section
+  id="experience"
+  class="box-container"
+  appScrollSpy
+  [sectionId]="'experience'"
+>
   <article class="box-content">
     <h3>Experiencia</h3>
     <hr />
