--- a/src/app/home/components/sections/technologies/technologies.component.html
+++ b/src/app/home/components/sections/technologies/technologies.component.html
@@ -1,4 +1,9 @@
-<section id="technologies" class="box-container">
+<section
+  id="technologies"
+  class="box-container"
+  appScrollSpy
+  [sectionId]="'technologies'"
+>
   <article class="box-content">
     <h3>Tecnologías</h3>
     <hr />
