--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -1,4 +1,4 @@
-<section id="home">
+<section id="home" appScrollSpy [sectionId]="'home'">
   <div class="box-container title-container">
     <div class="box-content title-content">
       <h1>
