--- a/src/app/home/layout/header/nav/nav.component.html
+++ b/src/app/home/layout/header/nav/nav.component.html
@@ -9,49 +9,20 @@
 
     <!-- NAVIGATION BAR LIST -->
     <ul class="nav-bar-list">
-      <li>
-        <a href="#">
-          <app-svg-icon [svgName]="'home'" />
-          Inicio
+      @for (item of navItems; track item.href) {
+      <li
+        [class.active]="
+          item.href === '#' + (this.scrollSpy.activeSection$ | async)
+        "
+      >
+        <a [href]="item.href">
+          <app-svg-icon [svgName]="item.icon" />
+          {{ item.label }}
         </a>
       </li>
-      <li>
-        <a href="#about-me">
-          <app-svg-icon [svgName]="'info'" />
-          Sobre mí
-        </a>
-      </li>
-      <li>
-        <a href="#experience">
-          <app-svg-icon [svgName]="'briefcase'" />
-          Experiencia
-        </a>
-      </li>
-      <li>
-        <a href="#technologies">
-          <app-svg-icon [svgName]="'code'" />
-          Tecnologías
-        </a>
-      </li>
-      <li>
-        <a href="#education">
-          <app-svg-icon [svgName]="'book'" />
-          Formación
-        </a>
-      </li>
-      <li>
-        <a href="#curriculum">
-          <app-svg-icon [svgName]="'file'" />
-          Currículum
-        </a>
-      </li>
-      <li>
-        <a href="#contact">
-          <app-svg-icon [svgName]="'chat'" />
-          Contacto
-        </a>
-      </li>
+      }
     </ul>
+
     <!-- MENU BUTTON -->
     <button
       class="menu-btn"
