Actualizada la cita en el componente de título y optimizados los estilos de texto para mejorar la responsividad.

--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -6,7 +6,7 @@
         Rodríguez Camacho
       </h1>
       <h2>Full-Stack Web Developer</h2>
-      <p>Intenta aprender algo sobre todo y todo sobre algo - Thomas Huxley</p>
+      <p>No busques la perfección, busca la mejora constante - James Clear</p>
       <div class="links">
         <!-- LINKEDIN -->
         <a
