--- a/src/app/home/components/sections/title/title.component.scss
+++ b/src/app/home/components/sections/title/title.component.scss
@@ -19,6 +19,7 @@ section#home {
 
 p {
   font-style: italic;
+  transition: font-size 0.2s ease-in-out;
 }
 
 .links {
@@ -42,5 +43,17 @@ p {
       background-color: $d-primary-color;
       transform: scale(1.1);
     }
+  }
+}
+
+@media (max-width: $tablet-breakpoint) {
+  p {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: $mobile-breakpoint) {
+  p {
+    font-size: 0.75rem;
   }
 }
