chore: update Angular dependencies to version 19.x and TypeScript to 5.8.3
refactor: adjust component metadata formatting for consistency across app components

style: change SCSS imports to use the new @use syntax in to-top-btn component

fix: remove standalone flag from ToTopBtnComponent as it is not needed

--- a/src/app/home/layout/to-top-btn/to-top-btn.component.scss
+++ b/src/app/home/layout/to-top-btn/to-top-btn.component.scss
@@ -1,5 +1,5 @@
-@import "./../../../assets/themes/themes.scss";
-@import "./../../../assets/themes/breakpoints.scss";
+@use "./../../../assets/themes/themes.scss" as *;
+@use "./../../../assets/themes/breakpoints.scss" as *;
 
 .to-top-btn {
   position: fixed;
