refactor: reemplazar @import con @use en archivos SCSS para mejorar la gestión de estilos

--- a/src/app/home/layout/footer/theme-toggle-slider/theme-toggle-slider.component.scss
+++ b/src/app/home/layout/footer/theme-toggle-slider/theme-toggle-slider.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../assets/themes/themes.scss";
+@use "./../../../../assets/themes/themes.scss" as *;
 
 /* The switch - the box around the slider */
 .switch {
