--- a/src/app/home/components/sections/experience/experience.component.scss
+++ b/src/app/home/components/sections/experience/experience.component.scss
@@ -1,5 +1,5 @@
-@import "src/app/assets/themes/themes.scss";
-@import "src/app/assets/themes/breakpoints.scss";
+@use "src/app/assets/themes/themes.scss" as *;
+@use "src/app/assets/themes/breakpoints.scss" as *;
 
 section#experience {
   background: rgba($black, 0.8);
