--- a/src/app/home/layout/footer/lang-selector/lang-selector.component.scss
+++ b/src/app/home/layout/footer/lang-selector/lang-selector.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../assets/themes/themes.scss";
+@use "./../../../../assets/themes/themes.scss" as *;
 
 .selector {
   position: relative;
