--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
-@import "normalize.css";
-@import "./app/assets/themes/themes.scss";
-@import "./app/assets/themes/breakpoints.scss";
-@import "./assets/styles/responsive-boxes.scss";
-@import "./assets/styles/timeline.scss";
-@import "./assets/styles/btn.scss";
+@use "normalize.css" as *;
+@use "./app/assets/themes/themes.scss" as *;
+@use "./app/assets/themes/breakpoints.scss" as *;
+@use "./assets/styles/responsive-boxes.scss" as *;
+@use "./assets/styles/timeline.scss" as *;
+@use "./assets/styles/btn.scss" as *;
 
 html {
   scroll-behavior: smooth;
